fix wrap issue in post

--- a/src/App.css
+++ b/src/App.css
@@ -197,6 +197,9 @@ body{
   text-align: left;
   padding: 50px;
   margin:10px;
+ 
+ 
+ 
 }
 
 .post-title{
@@ -220,10 +223,18 @@ body{
   margin-bottom:40px;
 }
 
-#post-content{
+#post-content *{
 
   margin:10px;
+  width:fit-content;
+  display: inline-block;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  width:100%;
+  white-space:normal;
+  
 }
+
 #post-content span{
   color: #eeeeee !important;
 }
@@ -248,6 +259,7 @@ body{
   font-size: 1.2rem;
   font-family: 'Nunito', sans-serif;
   color: #eeeeee;
+  overflow-wrap: break-word;
 }
 
 .read-more{
